# oootpu-isa

./: .gitignore  CMakeLists.txt  README.md
doc/: 0-数据类型、寄存器、操作数定义.md  1-访存指令.md  2-GEMM指令.md  3-逐元素算术指令.md  4-Mask指令.md  5-归约指令.md  6-MISC.md
example/: gemm.cpp  simmem.hpp
funcsim/: funcsim.hpp  regfile.cpp  regfile.hpp  tadd.tsub.tmul.tneg.tabs.cpp  tand.tor.txor.tnot.cpp  tcvt.cpp  tfill.tbcast.tshift.ttrans.tsetmask.cpp  tgather.tscatter.cpp  tgemm.cpp  tim2col.cpp  tload.cpp  tmax.tmin.cpp  tmeq.tmne.tmlt.tmge.tmle.tmgt.cpp  tmerge.cpp  tmmv.tmnot.tmand.tmnand.tmor.tmnor.tmxor.tmnxor.cpp  tredavg.tpol2avg.cpp  tredmax.tpol2max.cpp  tredmin.cpp  tredsum.cpp  trelu.trelu6.cpp  tsigmoid.ttanh.tgelu.cpp  tsll.tsrl.tsra.cpp  tsqrt.trsqrt.texp.trcp.cpp  tstore.cpp
funcsim/res/: approx.hpp  arithm.hpp  exactfp.hpp
isa/: oootpu.hpp
